# tmux-mcp

./: Cargo.toml  README.md  roadmap.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: args_gnu.rs  args_posix.rs  common.rs
skills/: tmux-policy.md
src/: client.rs  index.ts  lib.rs  lint.rs  main.rs  mcp.rs  proc.rs  stream.rs  tmux.ts
src/daemon/: mod.rs  rpc.rs  server.rs
src/pane/: mod.rs  osc.rs  osc133.rs  processor.rs  registry.rs  state.rs
src/parse/: escape.rs  layout.rs  mod.rs
src/policy/: approval.rs  args.rs  builtin_rules.toml  config.rs  mod.rs  parse.rs  rules.rs  structural.rs
src/tmux/: connection.rs  mod.rs  notification.rs  reader.rs
tests/: integration.rs
