[package]
name = "tmux-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
snafu = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fs2 = "0.4"
hostname = "0.4"
tokio-util = "0.7"
alacritty_terminal = { version = "0.26.0", default-features = false }
vte = { version = "0.15.0", features = ["ansi"] }
